GPII-364: Renamed highContrast to contrastEnabled. High contrast enactor is deprecated and not used anymore. Added default body color.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -37,6 +37,7 @@ body {
     transform-origin: 0 0 0;
     -webkit-transform-origin: 0 0 0;
     margin:20px;
+    background-color: #d5e2de;
 }
 
 .gpii-prefsEditor-preferenceGroup {
