GPII-271: Inappropriate namespaces modified. Need more of that.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -107,7 +107,7 @@ textarea:focus, input:focus {
     margin-left: 120px;
 }
 
-.gpii-speakText-partially-expanded {
+.gpii-partially-expanded {
     display: none;
 }
 
