GPII-364: Tweaked a bit the onOffSwitch style. Will need some more work here...

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -951,3 +951,7 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 .gpii-contrastThemeIndicator {
 	margin: 0 0 0 1.5em !important;
 }
+
+.gpii-contrast-contrastOptions {
+	display: inline-block;
+}
