--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -84,10 +84,10 @@ h2 > label {
 .gpii-prefsEditor-headerImage {
     -webkit-font-smoothing: antialiased;
     width: 330;
+    height: 90px;
     margin:5px !important;
     color: white;
     background-color: #566374;    
-    position: absolute;
 }
 
 .gpii-prefsEditor-headerImage:before {
@@ -97,7 +97,7 @@ h2 > label {
 .gpii-prefsEditor-headerImageTick {
     font-size: 20px !important;
     margin-left: 300px;
-    margin-top: -30px;
+    margin-top: -120px;
     background-color: white;
     border-radius: 50%;
     padding: 2px;
@@ -144,9 +144,9 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
 
 .gpii-prefsEditor-headerClickableLabel {
     cursor: pointer;
-    color: transparent !important;
-    margin: 5px !important;
+    margin: 0 !important;
     position: relative !important;
+    top: -90px;
 }
 
 input[type=checkbox], input[type=radio] {
