NOJIRA: Corrected layout of addToMyPreferences star. Markup was removed so i had to comment out selector. Does not work for "Increase size". This will be hidden for now so leave those for later.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -550,9 +550,9 @@ input[type=checkbox], input[type=radio] {
 
 .gpii-prefsEditor-addToMyPreferencesStar {
     margin-left: 310px;
-    margin-top: 10px;
+    margin-top: -90px;
     color: #6b7281;
-      position: absolute;
+    position: relative;
     font-size: 16px;
     display: table;
     padding: 2px;
