--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -83,9 +83,9 @@ h2 > label {
 */
 .gpii-prefsEditor-headerImage {
     -webkit-font-smoothing: antialiased;
-    width: 330;
+    width: 100%;
     height: 90px;
-    margin:5px !important;
+    margin: 0px !important;
     color: white;
     background-color: #566374;    
 }
@@ -96,7 +96,8 @@ h2 > label {
 
 .gpii-prefsEditor-headerImageTick {
     font-size: 20px !important;
-    margin-left: 300px;
+    float: right !important;
+	margin-right: 5px;
     margin-top: -120px;
     background-color: white;
     border-radius: 50%;
@@ -127,7 +128,7 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
 .gpii-prefsEditor-headerTitle {
     font-family: 'Roboto Slab', serif;
     left: 0; 
-    width: 100%;
+    width: calc(100% - 90px) !important;
     color: white;
     text-align: left;
     font-size: 1.8em !important;
@@ -549,7 +550,7 @@ input[type=checkbox], input[type=radio] {
 }
 
 .gpii-prefsEditor-addToMyPreferencesStar {
-    margin-left: 310px;
+    float: right;
     margin-top: -90px;
     color: #6b7281;
     position: relative;
@@ -569,9 +570,11 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
     width: 17px !important;
     cursor: pointer;
     margin-left: 310px;
-    margin-top: 10px;
     display: table;
     padding: 2px;
+    float: right;
+    margin-top: -90px;
+    position: relative;
 }
 
 /*
