NOJIRA: Some styling in frames. Do not use font size 1.2em and let width be determined by top preference sets widths (my preferences / all preferences).

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -16,8 +16,8 @@ body {
 
 .gpii-prefsEditor-pmtContainer {
 	display: table;
-	font-size: 1.2em;	
-	width: 450px;
+	//font-size: 1.2em;	
+	width: 340px;
 }
 
 .gpii-prefsEditor-frameIcon {
