NOJIRA: Some styling in frames.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -970,6 +970,11 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 	display: inline-block;
 }
 
+.fl-prefsEditor .fl-choice {
+	display: inline-block;
+    float: none;
+}
+
 /*
     Style for onOffSwitch adjuster
 */
