--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -186,3 +186,8 @@ body {
     top: 0;
     width: 100%;
 }
+
+.gpii-prefsEditor-adjusterGroup {
+	margin-bottom: 2em;
+	background-color: #e5eded;
+}
