--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -196,5 +196,5 @@ body {
 /* This conflits with speakText-style.css
 Needed for the frame's popup */
 .ui-corner-all {
-    width: 420 !important;
+    width: 30em !important;
 }
