--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -206,7 +206,7 @@ input[type=checkbox], input[type=radio] {
     The slider's style
 */
 .gpii-prefsEditor .gpii-prefsEditor-slider-horz {
-    width: calc(100% - 3em);
+    width: calc(100% - 3em) !important; /* this conflicts with frames.css .ui-corner-all */
     margin: 2px !important;
     margin-bottom: 0.7em !important;
 }
