GPII-271: The PCP part is now using Composite & Conditional panels.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -113,12 +113,8 @@ textarea:focus, input:focus {
     margin-left: 120px;
 }
 
-.gpii-partially-expanded {
-    display: none;
-}
-
 .gpii-fully-expanded {
-    display: none;
+    /*display: none;*/
 }
 
 .gpii-switch {
