--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -144,7 +144,7 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
 }
 
 .gpii-prefsEditor-headerClickableLabel {
-    cursor: pointer;
+    //cursor: pointer;
     margin: 0 !important;
     position: relative !important;
     top: -90px;
