GPII-364, GPII-365: Overall styling and outlook. Resembles now the mockups. Will need some more work upon merging with Alex.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -48,7 +48,9 @@ body {
 
 .gpii-prefsEditor-category {
     width: 80%;
-    margin: 0 auto;
+    margin-left: 10%;
+    margin-right: 10%;
+    //margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -74,7 +76,7 @@ h2 {
 }
 
 h2 > label {
-    width: 240px !important;
+    //width: 240px !important;
     word-wrap: break-word;    
 }
 
@@ -269,15 +271,15 @@ input[type=checkbox], input[type=radio] {
     Style for sliding to work
 */
 .gpii-increaseSizePreferenceGroup {
-    padding-top: 100px;
+    //padding-top: 100px;
 }
 
 .gpii-prefsEditor-category {
-    overflow: hidden;
+    display: inline-block;
 }
 
 .gpii-prefsEditor-category-hidden {
-    overflow: hidden;
+    //overflow: hidden;
 }
 
 /*
@@ -285,7 +287,7 @@ input[type=checkbox], input[type=radio] {
 */
 .gpii-prefsEditor-moreLess{
 	display: block;
-    width:100% !important;
+    //width:100% !important;
     text-align: center;
     cursor: pointer;
     padding-bottom: 5px !important;
@@ -298,6 +300,7 @@ input[type=checkbox], input[type=radio] {
 .gpii-increaseSize-magnifierPositionContainer {
 	display: inline-block;
 	width: 100% !important;
+	margin-top: 20px;
 }
 
 .gpii-increaseSize-magnifierPositionIconLabel {
@@ -974,8 +977,40 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
     Style for onOffSwitch adjuster
 */
 .gpii-onOffSwitch-container {
-	display: inline-block;
-    padding-bottom: 1em;
-    padding-top: 1em;
+	//display: inline-block;
+    //padding-bottom: 1em;
+    //padding-top: 1em;
     width: 100%;
+    padding-bottom: 30px;
+}
+
+.gpii-prefsEditor-firstHeading {
+	padding: 0 !important;
+	color: black !important;
+	margin-top:20px;
+	margin-bottom:20px;
+}
+
+h4 {
+	margin-bottom: 5px;
+}
+
+.gpii-prefsEditor-adjusterPanel {
+	margin-bottom: 20px;
+}
+
+.gpii-prefsEditor-separator {
+	height: 3px;
+	background-color: white;
+	border-bottom: 1px solid #dde7e5;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+.gpii-iconCheck-adjuster {
+	margin-top: 20px;
+}
+
+.gpii-followingElement-container {
+	margin-top: 20px;
 }
