--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -272,6 +272,7 @@ input[type=checkbox], input[type=radio] {
 */
 .gpii-increaseSizePreferenceGroup {
     //padding-top: 100px;
+    padding-bottom: 10px;
 }
 
 .gpii-prefsEditor-category {
