GPII-364: Minor styling tweak.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -270,7 +270,7 @@ input[type=checkbox], input[type=radio] {
 /*
     Style for sliding to work
 */
-.gpii-increaseSizePreferenceGroup {
+.gpii-increaseSizePreferenceGroup, .contrastPreferenceGroup {
     //padding-top: 100px;
     padding-bottom: 10px;
 }
