GPII-364, GPII-365: Minor styling tweak.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -272,7 +272,7 @@ input[type=checkbox], input[type=radio] {
 */
 .gpii-increaseSizePreferenceGroup, .contrastPreferenceGroup {
     //padding-top: 100px;
-    padding-bottom: 10px;
+    //padding-bottom: 10px;
 }
 
 .gpii-prefsEditor-category {
